--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,7 @@ jobs:
   test_backend:
     name: Test backend with Docker image
     runs-on: ubuntu-latest
-    needs: build
+    needs: build_backend
     steps:
       - name: Checkout master
         uses: actions/checkout@v2.3.4
@@ -77,7 +77,7 @@ jobs:
   deploy_backend:
     name: Deploy backend to Heroku
     runs-on: ubuntu-latest
-    needs: [build, test]
+    needs: [build_backend, test_backend]
     env:
       HEROKU_APP_NAME: damp-fortress-19341
       HEROKU_REGISTRY_IMAGE: registry.heroku.com/damp-fortress-19341/improved_cloud_selection
