--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,7 +66,7 @@ jobs:
             -p 5003:8765 \
             ${{ env.IMAGE }}:latest
       - name: Pytest
-        run: docker exec improved-cloud-selection poetry run python -m pytest .
+        run: docker exec improved-cloud-selection poetry run python -m pytest -n auto .
       - name: Flake8
         run: docker exec improved-cloud-selection poetry run python -m flake8 .
       - name: Black
