maint: remove dev python packages from prod image

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,6 +65,8 @@ jobs:
             -e DATABASE_TEST_URL=sqlite://sqlite.db \
             -p 5003:8765 \
             ${{ env.IMAGE }}:latest
+      - name: Install dev libs because they are not included in the production image
+        run: docker exec improved-cloud-selection poetry run poetry install
       - name: Pytest
         run: docker exec improved-cloud-selection poetry run python -m pytest -n auto .
       - name: Flake8
