--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -9,9 +9,6 @@ RUN addgroup --system app && adduser --system --group app
 
 # create the appropriate directories
 ENV HOME=/home/app
-ENV APP_HOME=/home/app/web
-RUN mkdir $APP_HOME
-WORKDIR $APP_HOME
 
 # set environment variables
 ENV PYTHONDONTWRITEBYTECODE 1
@@ -33,7 +30,7 @@ RUN poetry install --no-dev
 COPY . .
 
 # chown all the files to the app user
-RUN chown -R app:app $APP_HOME
+RUN chown -R app:app $HOME
 
 # change to the app user
 USER app
