--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -76,6 +76,7 @@ jobs:
         run: docker exec improved-cloud-selection poetry run python -m isort . --check-only
 
   deploy_backend:
+    if: github.event_name == 'pull_request'
     name: Deploy backend to Heroku
     runs-on: ubuntu-latest
     needs: [build_backend, test_backend]
