--- a/backend/setup.cfg
+++ b/backend/setup.cfg
@@ -1,2 +1,16 @@
 [flake8]
 max-line-length = 119
+max-complexity = 10
+ignore =
+    S101 ; use of assert detected (useless with pytest)
+    D10 ; missing docstrings
+    W503 ; line break before binary operator (conflicting with black)
+    B008 ; function calls in argument defualts (difficult to follow with FastAPI)
+
+[mypy]
+python_version = 3.8
+check_untyped_defs = True
+ignore_missing_imports = True
+warn_unused_ignores = True
+warn_redundant_casts = True
+warn_unused_configs = True
