--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "improved-cloud-selection"
 version = "0.1.0"
-description = ""
+description = "Improved cloud selection"
 authors = ["Roman Mkrtchian <mkrtchia@gmail.com>"]
 
 [tool.poetry.dependencies]
@@ -18,3 +18,18 @@ flake8 = "^3.9.2"
 black = "^21.9b0"
 isort = "^5.9.3"
 pytest-xdist = "^2.3.0"
+mccabe = "^0.6.1"
+darglint = "^1.8.0"
+flake8-isort = "^4.0.0"
+flake8-pytest = "^1.3"
+flake8-pytest-style = "^1.5.0"
+flake8-bandit = "^2.1.2"
+flake8-comprehensions = "^3.6.1"
+flake8-docstrings = "^1.6.0"
+flake8-string-format = "^0.3.0"
+flake8-bugbear = "^21.9.1"
+flake8-debugger = "^4.0.0"
+flake8-eradicate = "^1.1.0"
+flake8-broken-line = "^0.3.0"
+pep8-naming = "^0.12.1"
+mypy = "^0.910"
