maint: add the CI/CD part for the frontend

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,9 +4,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "predeploy": "yarn build && next export && touch out/.nojekyll",
+    "deploy": "gh-pages -d out",
     "type-check": "tsc --pretty --noEmit",
     "format": "prettier --write .",
-    "format-check": "prettier .",
+    "format-check": "prettier --check .",
     "lint": "eslint . --ext ts --ext tsx --ext js",
     "test": "jest",
     "test-all": "yarn lint && yarn type-check && yarn test"
@@ -40,6 +42,7 @@
     "eslint": "^7.19.0",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-react": "^7.19.0",
+    "gh-pages": "^3.2.3",
     "husky": "^4.2.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.0.4",
