--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -114,3 +114,64 @@ jobs:
         run: |
           chmod +x ./backend/release.sh
           ./backend/release.sh
+
+          name: Deploy
+
+  test_frontend:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [16.x]
+    steps:
+      - uses: actions/checkout@v2
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
+      - name: Install dependencies
+        run: yarn install
+        working-directory: ./frontend
+      - name: Run eslint
+        run: yarn lint
+        working-directory: ./frontend
+        env:
+          CI: true
+      - name: Run prettier
+        run: yarn format-check
+        working-directory: ./frontend
+        env:
+          CI: true
+      - name: Run TypeScript compiler
+        run: yarn type-check
+        working-directory: ./frontend
+        env:
+          CI: true
+      - name: Run unit tests
+        run: yarn test
+        working-directory: ./frontend
+        env:
+          CI: true
+
+  deploy_frontend:
+    # if: github.event_name == 'push'
+    runs-on: ubuntu-latest
+    needs: test_frontend
+    strategy:
+      matrix:
+        node-version: [16.x]
+    steps:
+      - uses: actions/checkout@v2
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
+      - name: Install dependencies
+        run: yarn install
+        working-directory: ./frontend
+      - name: Deploy
+        run: |
+          git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
+          yarn deploy -- -u "github-actions-bot <support+actions@github.com>"
+        working-directory: ./frontend
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
