--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -119,15 +119,12 @@ jobs:
 
   test_frontend:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [16.x]
     steps:
       - uses: actions/checkout@v2
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Use Node.js 16.x
         uses: actions/setup-node@v1
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: 16.x
       - name: Install dependencies
         run: yarn install
         working-directory: ./frontend
@@ -156,15 +153,12 @@ jobs:
     # if: github.event_name == 'push'
     runs-on: ubuntu-latest
     needs: test_frontend
-    strategy:
-      matrix:
-        node-version: [16.x]
     steps:
       - uses: actions/checkout@v2
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Use Node.js 16.x
         uses: actions/setup-node@v1
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: 16.x
       - name: Install dependencies
         run: yarn install
         working-directory: ./frontend
