--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -118,6 +118,7 @@ jobs:
           name: Deploy
 
   test_frontend:
+    name: Test frontend
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -151,6 +152,7 @@ jobs:
 
   deploy_frontend:
     if: github.event_name == 'push'
+    name: Deploy frontend to github pages
     runs-on: ubuntu-latest
     needs: test_frontend
     steps:
