--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -53,13 +53,6 @@ repos:
     rev: v7.32.0
     hooks:
       - id: eslint
-        args: ["--max-warnings=0"]
+        args: ["--max-warnings=0", "--ext ts", "--ext tsx", "--ext js"]
         additional_dependencies:
-          [
-            eslint@v7.32.0,
-            eslint-plugin-flowtype,
-            eslint-plugin-import,
-            eslint-plugin-jsx-a11y,
-            eslint-plugin-react,
-            eslint-plugin-react-hooks,
-          ]
+          [eslint@v7.32.0, eslint-plugin-react, eslint-plugin-react-hooks]
