--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -53,6 +53,11 @@ repos:
     rev: v7.32.0
     hooks:
       - id: eslint
-        args: ["--max-warnings=0", "--ext ts", "--ext tsx", "--ext js"]
+        args: ["--max-warnings=0", "--ext=ts", "--ext=tsx", "--ext=js"]
         additional_dependencies:
-          [eslint@v7.32.0, eslint-plugin-react, eslint-plugin-react-hooks]
+          [
+            eslint@v7.32.0,
+            eslint-plugin-react,
+            eslint-plugin-react-hooks,
+            eslint-plugin-jsx-a11y,
+          ]
