--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "babel-jest": "^27.0.2",
     "eslint": "^7.19.0",
     "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.19.0",
     "gh-pages": "^3.2.3",
     "identity-obj-proxy": "^3.0.0",
