--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -54,6 +54,8 @@ repos:
     hooks:
       - id: eslint
         args: ["--max-warnings=0", "--ext=ts", "--ext=tsx", "--ext=js"]
+        files: \.[jt]sx?$ # *.js, *.jsx, *.ts and *.tsx
+        types: [file]
         additional_dependencies:
           [
             eslint@v7.32.0,
