--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -115,9 +115,8 @@ jobs:
           chmod +x ./backend/release.sh
           ./backend/release.sh
 
-          name: Deploy
-
   test_frontend:
+    name: Test frontend
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -151,6 +150,7 @@ jobs:
 
   deploy_frontend:
     if: github.event_name == 'push'
+    name: Deploy frontend to github pages
     runs-on: ubuntu-latest
     needs: test_frontend
     steps:
