--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -33,3 +33,7 @@ flake8-eradicate = "^1.1.0"
 flake8-broken-line = "^0.3.0"
 pep8-naming = "^0.12.1"
 mypy = "^0.910"
+pre-commit = "^2.15.0"
+
+[tool.isort]
+profile = "black"
