--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,21 +9,9 @@
     "type-check": "tsc --pretty --noEmit",
     "format": "prettier --write .",
     "format-check": "prettier --check .",
-    "lint": "eslint . --ext ts --ext tsx --ext js",
+    "lint": "eslint . --ext ts --ext tsx --ext js --max-warnings=0",
     "test": "jest",
     "test-all": "yarn lint && yarn type-check && yarn test"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged",
-      "pre-push": "yarn run type-check"
-    }
-  },
-  "lint-staged": {
-    "*.@(ts|tsx)": [
-      "yarn lint",
-      "yarn format"
-    ]
   },
   "dependencies": {
     "next": "latest",
@@ -41,13 +29,12 @@
     "babel-jest": "^27.0.2",
     "eslint": "^7.19.0",
     "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.19.0",
     "gh-pages": "^3.2.3",
-    "husky": "^4.2.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.0.4",
     "jest-watch-typeahead": "^0.6.1",
-    "lint-staged": "^10.0.10",
     "prettier": "^2.0.2",
     "typescript": "^4.1.3"
   }
