--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "swr": "^1.0.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.14.1",
