--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -6,7 +6,8 @@
     "plugin:react/recommended",
     "plugin:@typescript-eslint/recommended",
     "prettier",
-    "plugin:jsx-a11y/recommended"
+    "plugin:jsx-a11y/recommended",
+    "plugin:@next/next/recommended"
   ],
   "env": {
     "es6": true,
