--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -9,10 +9,10 @@ python = "^3.8"
 fastapi = "^0.68.1"
 uvicorn = "^0.15.0"
 gunicorn = "^20.1.0"
+requests = "^2.26.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
-requests = "^2.26.0"
 pytest-cov = "^2.12.1"
 flake8 = "^3.9.2"
 black = "^21.9b0"
@@ -34,6 +34,7 @@ flake8-broken-line = "^0.3.0"
 pep8-naming = "^0.12.1"
 mypy = "^0.910"
 pre-commit = "^2.15.0"
+types-requests = "^2.25.6"
 
 [tool.isort]
 profile = "black"
