--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -19,6 +19,7 @@ ENV PYTHONUNBUFFERED 1
 ENV ENVIRONMENT prod
 ENV TESTING 0
 ENV FRONTEND_URL https://mkrtchian.github.io/improved-cloud-selection/
+ENV REDIS_URL redis://redis:6379/0
 
 # install system dependencies
 RUN apt-get update \
