--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -10,6 +10,7 @@ fastapi = "^0.68.1"
 uvicorn = "^0.15.0"
 gunicorn = "^20.1.0"
 requests = "^2.26.0"
+fastapi-redis-cache = "^0.2.5"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
