--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -143,7 +143,7 @@ jobs:
         env:
           CI: true
       - name: Run unit tests
-        run: yarn test
+        run: yarn test:ci
         working-directory: ./frontend
         env:
           CI: true
