remove the watch for frontend tests in the CI

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,7 @@
     "format-check": "prettier --check .",
     "lint": "eslint . --ext ts --ext tsx --ext js --max-warnings=0",
     "test": "jest --watch",
-    "test:ci": "jest --watch",
+    "test:ci": "jest",
     "test-all": "yarn lint && yarn type-check && yarn test:ci"
   },
   "dependencies": {
