maint: add end to end system with codeceptjs, with backend and frontend starting not working yet

--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -6,6 +6,7 @@
     "plugin:react/recommended",
     "plugin:@typescript-eslint/recommended",
     "prettier",
+    "plugin:codeceptjs/recommended",
     "plugin:jsx-a11y/recommended",
     "plugin:@next/next/recommended"
   ],
