--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -161,3 +161,41 @@ jobs:
         working-directory: ./frontend
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  test_end_to_end:
+    name: Test frontend
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Use Node.js 16.x
+        uses: actions/setup-node@v1
+        with:
+          node-version: 16.x
+      - name: Install frontend dependencies
+        run: yarn install
+        working-directory: ./frontend
+      - name: Log in to GitHub Packages
+        run: echo ${GITHUB_TOKEN} | docker login -u ${GITHUB_ACTOR} --password-stdin docker.pkg.github.com
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Pull backend image
+        run: |
+          docker pull ${{ env.BACKEND_IMAGE }}:latest || true
+      - name: Build and tag pulled image
+        run: |
+          docker build \
+            --cache-from ${{ env.BACKEND_IMAGE }}:latest \
+            --tag ${{ env.BACKEND_IMAGE }}:latest \
+            --file ./backend/Dockerfile.prod \
+            "./backend"
+      - name: Run unit tests
+        run: yarn e2e
+        working-directory: ./frontend
+        env:
+          CI: true
+      - name: Archive end to end screenshots
+        uses: actions/upload-artifact@v2
+        if: failure()
+        with:
+          name: end-to-end-output
+          path: frontend/e2e/output/
