--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,6 @@ jobs:
           docker push ${{ env.BACKEND_IMAGE }}:latest
 
   test_backend:
-    if: github.event_name == 'push'
     name: Test backend with Docker image
     runs-on: ubuntu-latest
     needs: build_backend
@@ -117,7 +116,6 @@ jobs:
           ./backend/release.sh
 
   test_frontend:
-    if: github.event_name == 'push'
     name: Test frontend
     runs-on: ubuntu-latest
     steps:
@@ -190,7 +188,7 @@ jobs:
             --tag ${{ env.BACKEND_IMAGE }}:latest \
             --file ./backend/Dockerfile.prod \
             "./backend"
-      - name: Run unit tests
+      - name: Run end to end tests
         run: BACKEND_IMAGE=${{ env.BACKEND_IMAGE }} yarn e2e
         working-directory: ./frontend
         env:
