--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,8 @@
     "lint": "eslint . --ext ts --ext tsx --ext js --max-warnings=0",
     "test": "jest --watch",
     "test:ci": "jest",
-    "test-all": "yarn lint && yarn type-check && yarn test:ci"
+    "test-all": "yarn lint && yarn type-check && yarn test:ci",
+    "e2e": "cd e2e/config && npx codeceptjs run --steps --config ./codecept.conf.js"
   },
   "dependencies": {
     "axios": "^0.21.4",
@@ -22,6 +23,7 @@
     "swr": "^1.0.1"
   },
   "devDependencies": {
+    "@codeceptjs/configure": "^0.7.0",
     "@next/eslint-plugin-next": "^11.1.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.5",
@@ -31,15 +33,20 @@
     "@typescript-eslint/eslint-plugin": "^4.14.2",
     "@typescript-eslint/parser": "^4.14.2",
     "babel-jest": "^27.0.2",
+    "codeceptjs": "^3.1.2",
     "eslint": "^7.19.0",
     "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-codeceptjs": "^1.3.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.19.0",
     "gh-pages": "^3.2.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.0.4",
     "jest-watch-typeahead": "^0.6.1",
+    "playwright": "^1.14.1",
+    "pm2": "^5.1.1",
     "prettier": "^2.0.2",
+    "ts-node": "^10.2.1",
     "typescript": "^4.1.3"
   }
 }
