--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -165,6 +165,7 @@ jobs:
   test_end_to_end:
     name: Test end to end
     runs-on: ubuntu-latest
+    needs: [test_frontend, test_backend]
     steps:
       - uses: actions/checkout@v2
       - name: Use Node.js 16.x
