--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "axios": "^0.21.4",
+    "geolib": "^3.3.1",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
