--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -41,4 +41,4 @@ RUN chown -R app:app $HOME
 USER app
 
 # run gunicorn
-CMD poetry run gunicorn --bind 0.0.0.0:$PORT improved_cloud_selection.main:app -k uvicorn.workers.UvicornWorker
+CMD poetry run gunicorn --bind 0.0.0.0:$PORT improved_cloud_selection.main:app -k uvicorn.workers.UvicornWorker --proxy-protocol --proxy-allow-from '*' --forwarded-allow-ips '*'
