--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
     "build": "next build",
     "start": "next start",
     "predeploy": "yarn build && next export && touch out/.nojekyll",
-    "deploy": "gh-pages -d out",
+    "deploy": "gh-pages -t true -d out",
     "type-check": "tsc --pretty --noEmit",
     "format": "prettier --write .",
     "format-check": "prettier --check .",
