--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,6 +35,7 @@ jobs:
           docker push ${{ env.BACKEND_IMAGE }}:latest
 
   test_backend:
+    if: github.event_name == 'push'
     name: Test backend with Docker image
     runs-on: ubuntu-latest
     needs: build_backend
@@ -79,7 +80,7 @@ jobs:
     #if: github.event_name == 'push'
     name: Deploy backend to Heroku
     runs-on: ubuntu-latest
-    needs: [build_backend, test_backend]
+    needs: [build_backend]
     env:
       HEROKU_APP_NAME: damp-fortress-19341
       HEROKU_REGISTRY_IMAGE: registry.heroku.com/damp-fortress-19341/improved_cloud_selection
@@ -116,6 +117,7 @@ jobs:
           ./backend/release.sh
 
   test_frontend:
+    if: github.event_name == 'push'
     name: Test frontend
     runs-on: ubuntu-latest
     steps:
@@ -163,6 +165,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   test_end_to_end:
+    if: github.event_name == 'push'
     name: Test end to end
     runs-on: ubuntu-latest
     needs: [test_frontend, test_backend]
