--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,6 @@ jobs:
           docker push ${{ env.BACKEND_IMAGE }}:latest
 
   test_backend:
-    if: github.event_name == 'push'
     name: Test backend with Docker image
     runs-on: ubuntu-latest
     needs: build_backend
@@ -77,10 +76,10 @@ jobs:
         run: docker exec improved_cloud_selection_backend poetry run python -m black . --check
 
   deploy_backend:
-    #if: github.event_name == 'push'
+    if: github.event_name == 'push'
     name: Deploy backend to Heroku
     runs-on: ubuntu-latest
-    needs: [build_backend]
+    needs: [build_backend, test_backend]
     env:
       HEROKU_APP_NAME: damp-fortress-19341
       HEROKU_REGISTRY_IMAGE: registry.heroku.com/damp-fortress-19341/improved_cloud_selection
@@ -117,7 +116,6 @@ jobs:
           ./backend/release.sh
 
   test_frontend:
-    if: github.event_name == 'push'
     name: Test frontend
     runs-on: ubuntu-latest
     steps:
@@ -165,7 +163,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   test_end_to_end:
-    if: github.event_name == 'push'
     name: Test end to end
     runs-on: ubuntu-latest
     needs: [test_frontend, test_backend]
