--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,6 +44,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.0.4",
     "jest-watch-typeahead": "^0.6.1",
+    "pac-resolver": "^5.0.0",
     "playwright": "^1.14.1",
     "pm2": "^5.1.1",
     "prettier": "^2.0.2",
