--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,7 @@
     "lint": "eslint . --ext ts --ext tsx --ext js --max-warnings=0",
     "test": "jest --watch",
     "test:ci": "jest",
-    "test-all": "yarn lint && yarn type-check && yarn test:ci",
+    "test-all": "yarn lint && yarn type-check && yarn format-check && yarn test:ci",
     "e2e": "cd e2e/config && npx codeceptjs run --steps --config ./codecept.conf.js"
   },
   "dependencies": {
