feat: organize clouds with user geo location and shortest distance, computed from IP address and from navigator API (#12)

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,18 +5,19 @@
     "build": "next build",
     "start": "next start",
     "predeploy": "yarn build && next export && touch out/.nojekyll",
-    "deploy": "gh-pages -d out",
+    "deploy": "gh-pages -t true -d out",
     "type-check": "tsc --pretty --noEmit",
     "format": "prettier --write .",
     "format-check": "prettier --check .",
     "lint": "eslint . --ext ts --ext tsx --ext js --max-warnings=0",
     "test": "jest --watch",
     "test:ci": "jest",
-    "test-all": "yarn lint && yarn type-check && yarn test:ci",
+    "test-all": "yarn lint && yarn type-check && yarn format-check && yarn test:ci",
     "e2e": "cd e2e/config && npx codeceptjs run --steps --config ./codecept.conf.js"
   },
   "dependencies": {
     "axios": "^0.21.4",
+    "geolib": "^3.3.1",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -43,6 +44,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.0.4",
     "jest-watch-typeahead": "^0.6.1",
+    "pac-resolver": "^5.0.0",
     "playwright": "^1.14.1",
     "pm2": "^5.1.1",
     "prettier": "^2.0.2",
