--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "strip-ansi": "^7.0.1",
     "swr": "^1.0.1"
   },
   "devDependencies": {
