maint: exclude PRs created by dependabot from triggering the docker image build

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,7 @@ env:
 
 jobs:
   build_backend:
+    if: github.actor!= 'depbot'
     name: Build backend Docker image
     runs-on: ubuntu-latest
     steps:
