add dependabot correct name

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ env:
 
 jobs:
   build_backend:
-    if: github.actor!= 'depbot'
+    if: github.actor!= 'dependabot[bot]'
     name: Build backend Docker image
     runs-on: ubuntu-latest
     steps:
