--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,8 +42,10 @@
     "eslint": "^7.19.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-codeceptjs": "^1.3.0",
+    "eslint-plugin-jest-dom": "^4.0.1",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-testing-library": "^5.0.5",
     "gh-pages": "^3.2.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.5.0",
