--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -84,6 +84,8 @@ jobs:
       HEROKU_APP_NAME: damp-fortress-19341
       HEROKU_REGISTRY_IMAGE: registry.heroku.com/damp-fortress-19341/improved_cloud_selection
     steps:
+      - name: Cancel Previous Runs
+        uses: styfle/cancel-workflow-action@0.9.1
       - name: Checkout master
         uses: actions/checkout@v3
       - name: Log in to GitHub Packages
@@ -146,6 +148,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: test_frontend
     steps:
+      - name: Cancel Previous Runs
+        uses: styfle/cancel-workflow-action@0.9.1
       - uses: actions/checkout@v3
       - name: Use Node.js 16.x
         uses: actions/setup-node@v3
